@@ -8,6 +8,7 @@ Major changes since 1.10.1:
 Changes since 2.0.0-beta05:
 - Improved: Focus product name field if empty on master product page init
 - Improved: Focus product field if empty on shopping list item page init
+- Improved: On shopping list item page tap done on keyboard when in notes field to save item
 - Fixed: Sorting of entries on master data pages (#463) (thanks @Turysaz)
 - Fixed: Occasional crash on stock overview page
 
